--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,27 +8,43 @@
     <title>Code Quiz</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-<!-- Highscores saved locally in top left hand corner -->
-<!-- Beginning text Code Quiz Challenge with instructions and start button -->
-<!-- Main with header that changes with question -->
-<!-- answer choices that can be clicked and  has 'footer' with  correct or incorrect -->
-<!-- timer in top right hand corner -->
-<!-- When quiz  is done has  scoresaved and enter initials for high score board -->
-<!-- Go back or clear highscores -->
-<main>
-    <header>
-        <button id="highScores">High Scores</button>
-    </header>
-    <section>
-        <h1 id="quizTitle">Code Quiz Challenge</h1>
-        <p class="timerStyle"><span id="timer">10</span> seconds left!</p>
-        <p id="quizContent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, distinctio labore cumque incidunt, corporis iusto quae in explicabo ad vel fugiat itaque debitis vitae voluptatum quisquam. Alias quo ea eveniet.</p>
-        <button id="start">Start  Game</button>
-        <div id="result"></div>
-    </section>
-</main>
+    <!-- Highscores saved locally in top left hand corner -->
+    <!-- Beginning text Code Quiz Challenge with instructions and start button -->
+    <!-- Main with header that changes with question -->
+    <!-- answer choices that can be clicked and  has 'footer' with  correct or incorrect -->
+    <!-- timer in top right hand corner -->
+    <!-- When quiz  is done has  scoresaved and enter initials for high score board -->
+    <!-- Go back or clear highscores -->
+    <main>
+        <header>
+            <button id="highScores">High Scores</button>
+        </header>
+        <div id="highScoreBoard" style="display:none">
+        <p id="scoreIndex"></p>
+        <input type="text" id="nameInput">
+        <button id="submit">submit</button>
+        </div>
+        <section>
+            <h1 id="quizTitle">Code Quiz Challenge</h1>
+            <p class="timerStyle"><span id="timer">10</span> seconds left!</p>
+            <p id="quizQ">Welcome to the Quiz! You have 10 seconds to answer each question. At the end, you will have the chance to enter your intitials to join the High Score List! Good luck!</p>
+        
+            <div id="quizBtns" style="display: none">
+                <p id="select">Select your answer:</p>
+                <button id="answerBtn1" class="ansBtn">Answer 1</button>
+                <button id ="answerBtn2" class="ansBtn">Answer 2</button>
+                <button id = "answerBtn3" class="ansBtn">Answer 3</button>
+                <button id= "answerBtn4" class="ansBtn">Answer 4</button>
+            </div>
+            <button id="start">Start Game</button>
+            <button id="next" style="display:none">Next</button>
+            <div id="result" style="display:none">Result</div>
+        </section>
+    </main>
 
     <script src="./script.js"></script>
 </body>
+
 </html>
