--- a/index.html
+++ b/index.html
@@ -15,24 +15,25 @@
             <button id="highScores">High Scores</button>
         </header>
         <div id="highScoreBoard" style="display:none">
-        <p id="yourScore"></p>
-        <p id="firstName">Enter Your First Name Here:</p>
-        <input type="text" id="nameInput">
-        <button id="submit">submit</button>
-        <p id="highScoreTitle">High Scores</p>
-        <ul id="savedScores"></ul>
+            <p id="yourScore"></p>
+            <p id="firstName">Enter Your First Name Here:</p>
+                <input type="text" id="nameInput">
+                <button id="submit">submit</button>
+            <h3 id="highScoreTitle">High Scores:</h3>
+            <ul id="savedScores"></ul>
         </div>
         <section>
             <h1 id="quizTitle">Code Quiz Challenge</h1>
             <p class="timerStyle"><span id="timer"></span></p>
-            <p id="quizQ">Welcome to the Quiz! You have 10 seconds to answer each question. At the end, you will have the chance to enter your intitials to join the High Score List! Good luck!</p>
-        
+            <p id="quizQ">Welcome to the Quiz! You have 10 seconds to answer each question. At the end, you will have
+                the chance to enter your intitials to join the High Score List! Good luck!</p>
+
             <div id="quizBtns" style="display: none">
                 <p id="select">Select your answer:</p>
                 <button id="answerBtn1" class="ansBtn">Answer 1</button>
-                <button id ="answerBtn2" class="ansBtn">Answer 2</button>
-                <button id = "answerBtn3" class="ansBtn">Answer 3</button>
-                <button id= "answerBtn4" class="ansBtn">Answer 4</button>
+                <button id="answerBtn2" class="ansBtn">Answer 2</button>
+                <button id="answerBtn3" class="ansBtn">Answer 3</button>
+                <button id="answerBtn4" class="ansBtn">Answer 4</button>
             </div>
             <button id="start">Start Game</button>
             <button id="next" style="display:none">Next</button>
