changing quiz rules to be more clear

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
             <h1 id="quizTitle">Code Quiz Challenge</h1>
             <p class="timerStyle"><span id="timer"></span></p>
-            <p id="quizQ">Welcome to the Quiz! You have 10 seconds to answer each question. At the end, you will have
+            <p id="quizQ">Welcome to the Quiz! You have 10 seconds to answer all 10 questions. At the end, you will have
                 the chance to enter your intitials to join the High Score List! Good luck!</p>
 
             <div id="quizBtns" style="display: none">
